@@ -1,4 +1,4 @@
 DIST dbf-core-0.9.0.src.zip 781109 RMD160 967abe498c1982332d39cdc56f7efa461ef6f767 SHA1 c880589504805f4bc34105a68657aef2e5de4475 SHA256 6e40a164a457e6972d996d1600f5a83aa748e8c152f78dc0057247da19fb912a
-EBUILD dbf-0.9.0.ebuild 936 RMD160 16e1b2bfcae07aaab34f954614b5a72a58d0ef46 SHA1 1fa1d746c27027e7547085b1310ec0f5a6f93676 SHA256 5d11398269b856d7c83844c0db9b00f2b3e7f2d12196197731c860e2745dac3e
-MISC ChangeLog 251 RMD160 81d481be2ab5ef8d084aeed51edfb5d71a5f0bc7 SHA1 ee6a86e27c7787acd5e618be2017120551863a9f SHA256 6025796f2fa4c3d64cedaf417d6ee05060c5243afcbf6e202669e4a4518b0d50
+EBUILD dbf-0.9.0.ebuild 937 RMD160 9937fef22dfadc4f14156171462309e9fbf9797a SHA1 c9b06bc5e55e7798af2c42d7096219b1b017c5e3 SHA256 bb1014765e18328f2c187932dcecf7a8b2a44d183fda1417dd7b1c2230f10ffb
+MISC ChangeLog 361 RMD160 89c749bf76c98fc5aa2df9c4c6e21735c1e22869 SHA1 fd51054279050f358166c7ec15efb4ad9a2bb294 SHA256 018d2271d4429393a6336e8002f8179902f5fd4ad25803c8b0b572dfc1e1badf
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
