@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/dbf
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Jul 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> dbf-0.9.0.ebuild:
+  Whitespace, use PN in SRC_URI
 
   30 Dec 2008; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
   +dbf-0.9.0.ebuild, +metadata.xml:
